Cleanup warnings in ConfigAssertions